--- a/ERP/Inventory/templates/Inventory/warehouse_form.html
+++ b/ERP/Inventory/templates/Inventory/warehouse_form.html
@@ -1,16 +1,51 @@
-{% extends "Inventory/base.html" %}
-{% load static crispy_forms_tags %}
+{% extends "Inventory/_form_base.html" %}
+{% load static %}
 
-{% block inventory_title %}{% if form.instance.pk %}Edit{% else %}Create{% endif %} Warehouse{% endblock %}
+{% block title %}{% if form.instance.pk %}Edit Warehouse{% else %}Create Warehouse{% endif %}{% endblock %}
 
-{% block inventory_content %}
-{% include "Inventory/_form_card.html" with title=form_title subtitle=form_subtitle form=form cancel_url=cancel_url %}
-{% endblock %}
-
-{% block extra_context %}
-    {% if form.instance.pk %}
-        {% with form_title="Edit Warehouse" form_subtitle="Update details for this warehouse." cancel_url=request.META.HTTP_REFERER|default:"/inventory/warehouses/" %}{% endwith %}
-    {% else %}
-        {% with form_title="Create New Warehouse" form_subtitle="Add a new physical location for storing inventory." cancel_url=request.META.HTTP_REFERER|default:"/inventory/warehouses/" %}{% endwith %}
-    {% endif %}
+{% block form_content %}
+<div class="card">
+  <div class="card-body">
+    <form method="post" novalidate>
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+      <div class="row g-3">
+        <div class="col-md-4">
+          <label class="form-label">Code</label>
+          {{ form.code }} {{ form.code.errors }}
+        </div>
+        <div class="col-md-8">
+          <label class="form-label">Name</label>
+          {{ form.name }} {{ form.name.errors }}
+        </div>
+        <div class="col-md-12">
+          <label class="form-label">Address</label>
+          {{ form.address_line1 }} {{ form.address_line1.errors }}
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">City</label>
+          {{ form.city }} {{ form.city.errors }}
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Country Code</label>
+          {{ form.country_code }} {{ form.country_code.errors }}
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Inventory Account</label>
+          {{ form.inventory_account }} {{ form.inventory_account.errors }}
+        </div>
+        <div class="col-md-4">
+          <div class="form-check mt-4">
+            {{ form.is_active }} {{ form.is_active.errors }}
+            <label class="form-check-label ms-1">Active?</label>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-end gap-2 mt-3">
+        <a href="{% url 'inventory:warehouse_list' %}" class="btn btn-outline-secondary">Cancel</a>
+        <button type="submit" class="btn btn-primary">Save</button>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
