--- a/ERP/accounting/templates/accounting/journal_entry.html
+++ b/ERP/accounting/templates/accounting/journal_entry.html
@@ -38,6 +38,21 @@
 <div class="main-content">
   <div class="page-content">
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="page-title-box d-flex align-items-center justify-content-between">
+            <h4 class="mb-0">Journal Entry</h4>
+            <div class="page-title-right">
+              <ol class="breadcrumb m-0">
+                <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'accounting:voucher_list' %}">Vouchers</a></li>
+                <li class="breadcrumb-item active">Journal Entry</li>
+              </ol>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- In-page alert region (messages appear just below the top bar) -->
       <div id="app-alerts" class="mb-3" aria-live="polite" aria-atomic="true"></div>
 
